# Deterministic-metadata-governance-engine-for-CI-CD-enforcement

./: .gitignore  ANALYSIS.md  README.md  continuous_neural_ds.py  pyproject.toml  stochastic_graph_neural_ds.py
ai/: confidence.py  gemini_client.py  insight_generator.py
api/: __init__.py  main.py
chronos/: __init__.py  rollback.py  snapshot.py  timeline.py
config/: __init__.py  settings.py
docker/: .env.example  Dockerfile.api  Dockerfile.mcp  docker-compose.yml
frontend/: package-lock.json  package.json
hephaestus/: .env  README.md  pyproject.toml
hephaestus/.github/workflows/: ci.yml  tests.yml
hephaestus/api/: main.py
hephaestus/chronos/: __init__.py  snapshots.py
hephaestus/config/: settings.py
hephaestus/contracts/: odcs_schema.json
hephaestus/docker/: .env.example  docker-compose.yml
hephaestus/ingestion/: input_builder.py  lineage_loader.py  metadata_loader.py  schema_loader.py  volume_loader.py
hephaestus/mcp/: server.py
hephaestus/sentinel/: __init__.py  blast_radius.py  cli.py  diff_engine.py  fgs.py  sentinel.py
hephaestus/sentinel/skills/: base_skill.py  skills_loader.py
hephaestus/sentinel/skills/pii_detection/: SKILL.md  __init__.py  skill.py
hephaestus/sync/: engine.py
hephaestus/tests/: conftest.py
hephaestus/tests/unit/: test_blast_radius.py  test_diff_engine.py  test_fgs.py  test_ingestion_lineage.py  test_ingestion_metadata.py  test_input_builder.py
hephaestus_local/: .gitignore  api.py  api_v2.py  api_v3.py  test_fgs.py
ingestion/: lineage_loader.py  metadata_loader.py  schema_loader.py  volume_loader.py
(+110 files in other folders)
