[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hephaestus"
version = "0.1.0"
description = "Deterministic metadata governance engine for CI/CD enforcement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.1",
]

[project.scripts]
hephaestus-sentinel = "sentinel.cli:app"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
